ipad spacing issues

--- a/_sass/4-pages/_nav.sass
+++ b/_sass/4-pages/_nav.sass
@@ -54,7 +54,7 @@
     stroke: #000
 
   .si-icons span
-    padding: 25px 25px 0 0
+    margin: 28px 0px 0 15px
 
   #nav-list
     font-family: "lullabyregular", Arial, sans-serif
